--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,37 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        kotlin_version = '1.6.21'
+    }
+    repositories {
+        google()
+        jcenter()
+        mavenCentral()
+    }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:7.1.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
     }
 }
 
 allprojects {
-    addRepos(repositories)
     repositories {
-        maven { url "http://lib.gcssloop.com/repository/gcssloop-central/" }
-        maven { url 'http://mvn.mob.com/android/' }
+        maven {
+            url "http://lib.gcssloop.com/repository/gcssloop-central/"
+            allowInsecureProtocol = true
+        }
+        maven { url 'http://mvn.mob.com/android/'
+            allowInsecureProtocol = true}
         google()
         jcenter()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-        maven {url 'https://developer.huawei.com/repo/'}
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/releases' }
+        maven { url 'https://developer.huawei.com/repo/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/'
+            allowInsecureProtocol = true}
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/releases'
+            allowInsecureProtocol = true}
         maven { url 'https://repo1.maven.org/maven2/' }
 
         maven {
@@ -26,6 +40,7 @@ allprojects {
                 username = "admin"
                 password = "admin123"
             }
+            allowInsecureProtocol = true
         }
 
         maven {
@@ -34,7 +49,12 @@ allprojects {
                 username = "admin"
                 password = "admin123"
             }
+            allowInsecureProtocol = true
         }
+        maven { url "http://download.flutter.io"
+            allowInsecureProtocol = true}
+        maven { url 'http://nexus.tiens.com/repository/android-release'
+            allowInsecureProtocol = true}
     }
 }
 
